Minor Servlet Changes
- Mostly getting rid of minor errors/changing spacing
- Did make some changes on Database related stuff, but there wasn't that much to change